[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"


# Project setting -----------------------------
[project]
name = "mblt-model-zoo"
authors = [
    {"name" = "Mobilint Inc.", email = "tech-support@mobilint.com"},
]
dynamic = ["version"]
description = "A collection of pre-quantized AI models for Mobilint NPUs."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8,<3.13"
keywords = ["quantization", "NPU", "model zoo", "pre-quantized models", "inference", "mobilint", "mblt", "aries"]
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "torch>=2.4.1,<2.7.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "setuptools>=70.0.0",
    "tqdm",
    "wheel",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Home = "https://www.mobilint.com/"
Repository  = "https://github.com/mobilint/mblt-model-zoo"

[project.optional-dependencies]
transformers = [
    "transformers>=4.48,<4.52",
    "datasets>=3.2.0",
    "tf-keras<3.0",
    "safetensors>=0.4.5", 
    "librosa", 
    "soundfile",
]

# Tools setting -----------------------------------------
[tool.setuptools]
packages = { find = { where = ["."], include = ["mblt_model_zoo","mblt_model_zoo.*"] } }

[tool.setuptools.dynamic]
version = { attr = "mblt_model_zoo.__version__" }